# Axiom

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  техническое задание.md
.github/workflows/: chaos.yml  ci.yml  cross.yml  kind-smoke.yml
config/: default.toml
crates/aql-compile/: Cargo.toml
crates/aql-compile/src/: compile.rs  lib.rs  logical.rs  types.rs
crates/aql-lsp/: Cargo.toml
crates/aql-lsp/src/: lib.rs  ws.rs
crates/aql-syntax/: Cargo.toml
crates/aql-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/aql-syntax/tests/: proptest_parse.rs
crates/avm-bytecode/: Cargo.toml
crates/avm-bytecode/src/: binary_axc.rs  lib.rs  module.rs  opcode.rs
crates/avm-gc/: Cargo.toml
crates/avm-gc/src/: lib.rs  tlab.rs
crates/avm-jit/: Cargo.toml
crates/avm-jit/src/: lib.rs
crates/avm-runtime/: Cargo.toml
crates/avm-runtime/src/: disasm.rs  interpreter.rs  job.rs  lib.rs  pipeline_exec.rs  value.rs  window.rs
crates/axctl/: Cargo.toml
crates/axctl/src/: main.rs
crates/axiom/: Cargo.toml
crates/axiom-api/: Cargo.toml
crates/axiom-api/src/: auth.rs  lib.rs
crates/axiom-bench/: Cargo.toml
crates/axiom-bench/benches/: compile.rs
crates/axiom-connectors/: Cargo.toml
crates/axiom-connectors/src/: http.rs  kafka.rs  lib.rs  memory.rs  plugin.rs
crates/axiom-engine/: Cargo.toml
crates/axiom-engine/src/: barrier.rs  checkpoint.rs  exactly_once.rs  lib.rs  pipeline.rs  scheduler.rs
crates/axiom-gossip/: Cargo.toml
crates/axiom-gossip/src/: lib.rs  member.rs  network.rs  swim.rs  udp.rs
crates/axiom-grpc/: Cargo.toml
crates/axiom-grpc/src/: lib.rs  server.rs
crates/axiom-integration-tests/: Cargo.toml
crates/axiom-integration-tests/src/: lib.rs
crates/axiom-integration-tests/tests/: acceptance.rs  checkpoint_e2e.rs  exactly_once_e2e.rs  gossip_net.rs  gossip_udp.rs  pipeline_e2e.rs  three_node_cluster.rs
crates/axiom-metrics/: Cargo.toml
crates/axiom-metrics/src/: lib.rs
crates/axiom-ml/: Cargo.toml
crates/axiom-ml/src/: anomaly.rs  boosting.rs  lib.rs  linear.rs  mlp.rs  predict.rs
crates/axiom-net/: Cargo.toml
crates/axiom-net/src/: fragment.rs  lib.rs  packet.rs  sim.rs  tls.rs  transport.rs
crates/axiom-node/: Cargo.toml
crates/axiom-node/src/: config.rs  lib.rs  node.rs
crates/axiom-operator/: Cargo.toml
crates/axiom-operator/src/: kube.rs  lib.rs
crates/axiom-proto/: Cargo.toml  build.rs
crates/axiom-proto/proto/: axiom.proto
crates/axiom-proto/src/: lib.rs
crates/axiom-raft/: Cargo.toml
crates/axiom-raft/src/: lib.rs  node.rs  replicate.rs  rpc.rs  storage.rs
crates/axiom-schema/: Cargo.toml
crates/axiom-schema/src/: codec.rs  lib.rs  registry.rs
crates/axiom-storage-log/: Cargo.toml
crates/axiom-storage-log/src/: compress.rs  lib.rs  log.rs  partition.rs  record.rs
crates/axiom-storage-lsm/: Cargo.toml
crates/axiom-storage-lsm/src/: bloom.rs  compaction.rs  lib.rs  lsm.rs  memtable.rs  sstable.rs
crates/axiom-wasm/: Cargo.toml
crates/axiom-wasm/src/: lib.rs
crates/axiom/src/: main.rs
deploy/crds/: axiomcluster.yaml  axiomjob.yaml
deploy/docker/: Dockerfile
deploy/helm/axiom/: Chart.yaml  values.yaml
deploy/helm/axiom/templates/: deployment.yaml  service.yaml
docs/: PHASES.md  READINESS.md
docs/admin/: install.md
docs/aql/: spec.md
docs/architecture/: overview.md
docs/dev/: getting-started.md
docs/formats/: axc.md  log-record.md  raft.md  wire-protocol.md
examples/: sensor.aql
openapi/: axiom-v1.yaml
scripts/: dev-cluster.ps1  gen-sdk.sh  soak_1b.sh
sdk/js/: README.md  package.json
sdk/js/src/: index.ts
sdk/python/: README.md
sdk/python/axiom_client/: __init__.py
ui/: package.json  vite.config.ts
ui/src/: App.tsx  index.css  lsp.ts  sugiyama.ts
