[package]
name = "aql-lsp"
description = "AQL language server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aql-syntax.workspace = true
aql-compile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
