[package]
name = "avm-runtime"
description = "AVM interpreter and event loop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
avm-bytecode.workspace = true
axiom-schema.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
aql-compile.workspace = true
