[package]
name = "axctl"
description = "Axiom CLI (axctl)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "axctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
