[package]
name = "axiom-api"
description = "REST API for Axiom"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aql-compile.workspace = true
axiom-engine.workspace = true
axiom-metrics.workspace = true
axum.workspace = true
base64 = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
