[package]
name = "axiom-bench"
description = "Criterion benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
aql-compile.workspace = true
criterion.workspace = true

[[bench]]
name = "compile"
harness = false
