[package]
name = "axiom-engine"
description = "Distributed scheduler and exactly-once engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
avm-bytecode.workspace = true
avm-runtime.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
