[package]
name = "axiom-grpc"
description = "gRPC API (phase 3)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axiom-proto.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
