[package]
name = "axiom-net"
description = "Reliable UDP transport with TLS"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
crc32fast.workspace = true
futures.workspace = true
rand.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time", "rt", "macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
