[package]
name = "axiom-operator"
description = "Kubernetes operator for Axiom (phase 3)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
kube = ["dep:kube", "dep:k8s-openapi", "dep:tokio"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"], optional = true }

[dependencies.kube]
version = "0.98"
features = ["runtime", "derive"]
optional = true

[dependencies.k8s-openapi]
version = "0.24"
features = ["latest"]
optional = true
