[package]
name = "axiom-raft"
description = "Raft consensus implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
