[package]
name = "axiom-schema"
description = "Schema registry and Avro-like binary codec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
