[package]
name = "axiom-wasm"
description = "Wasm sandbox for untrusted connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["runtime"]
runtime = ["dep:wasmtime"]

[dependencies]
thiserror.workspace = true

[dependencies.wasmtime]
workspace = true
optional = true
