[package]
name = "axiom"
description = "Axiom platform entry binary"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axiom-node.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
